Remove libraries. Add androidx

--- a/app/src/main/res/layout/miss_click_fragment_layout.xml
+++ b/app/src/main/res/layout/miss_click_fragment_layout.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.constraint.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/content"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -70,5 +70,5 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/miss_click_draw_bound_rect_sw" />
 
-    </android.support.constraint.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </ru.etu.parkinsonlibrary.missclick.TrackingViewGroup>
